# Chethas-AI

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  consensus_builder.py  evidence_verifier.py  expert_factory.py  judge.py  planner.py  reflection.py  role_generator.py  task_decomposer.py
backend/app/agents/prompts/: __init__.py  consensus.py  evidence_verifier.py  expert.py  judge.py  planner.py  reflection.py  role_generator.py  task_decomposer.py
backend/app/api/: __init__.py  dependencies.py  middleware.py
backend/app/api/routes/: __init__.py  documents.py  (+4 more)
backend/app/context/: __init__.py  models.py  retrieval.py  strategy_router.py
backend/app/evaluation/: __init__.py  deepeval_eval.py  evaluator.py  metrics.py  ragas_eval.py
backend/app/ingestion/: __init__.py  chunking.py  embeddings.py  pipeline.py
backend/app/llm/: __init__.py  gemini.py  openai_compat.py  provider.py
backend/app/models/: __init__.py  agent.py  deliberation.py  evaluation.py  evidence.py  execution.py  goal.py
backend/app/orchestrator/: __init__.py  deliberation.py  edges.py  graph.py  nodes.py  state.py
backend/app/storage/: __init__.py  graph_store.py  persistent_store.py  state_store.py  vector_store.py
backend/app/tools/: __init__.py  blackboard.py  citation_verify.py  evidence_search.py  graph_query.py  python_interpreter.py  query_rewrite.py  registry.py
backend/data/: chethas_store.db
backend/tests/: test_smoke.py
(+58 files in other folders)
