[project]
name = "chethas"
version = "0.1.0"
description = "Autonomous Multi-Agent Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "neo4j>=5.0.0",
    "psycopg[binary]>=3.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "unstructured[all-docs]>=0.16.0",
    "python-pptx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
